--- a/10.2.0/angular/src/app/master-table/department/department.component.html
+++ b/10.2.0/angular/src/app/master-table/department/department.component.html
@@ -39,7 +39,7 @@
               <tr>
                 <td>{{ department.departmentName }}</td>
                 <td>{{ department.departmentType === 0 ? 'Doctor' : 'Lab Technician' }}</td>
-                <td>{{ department.isActive === 1 ? 'Yes' : 'No' }}</td>
+                <td>{{ department.isActive === true ? 'Yes' : 'No' }}</td>
                 <td>
                   <!-- Row Menu -->
                   <button class="btn btn-sm border rounded-1 px-3" type="button"
