--- a/10.2.0/angular/src/app/patient-discharge/list/list.component.html
+++ b/10.2.0/angular/src/app/patient-discharge/list/list.component.html
@@ -34,7 +34,7 @@
 
                         <ng-template pTemplate="body" let-record="$implicit">
                             <tr>
-                                <td> P#{{ record.patient.id }} </td>
+                                <td> #{{ record.patient.id }} </td>
                                 <td>
                                     <p-avatar [label]="getShortName(record.patient.fullName)" class="mr-1"
                                         size="small" />
