--- a/10.2.0/angular/src/app/admission/edit-addmission/edit-addmission.component.html
+++ b/10.2.0/angular/src/app/admission/edit-addmission/edit-addmission.component.html
@@ -1,12 +1,18 @@
 <form class="form-horizontal" autocomplete="off" #editAdmissionForm="ngForm" (ngSubmit)="save()">
     <abp-modal-header title="Edit Admission" (onCloseClick)="bsModalRef.hide()"></abp-modal-header>
     <div class="modal-body">
-        <div class="row">
-            <div class="col-md-12">
+     <div class="row mt-3">
+            <div class="col-md-6 d-flex flex-column">
                 <label><b>Select Patient</b></label>
                 <p-select [options]="patients" optionLabel="fullName" placeholder="Select a patient"
                     [optionValue]="'id'" [(ngModel)]="admission.patientId" name="patientId" class="w-100" required />
             </div>
+             <div class="col-md-6 d-flex flex-column">
+                 <label>Admission Type</label>
+                <p-select [(ngModel)]="admission.admissionType" name="admissionType" [options]="admissionTypeOptions"
+                    optionLabel="label" optionValue="value" placeholder="Select admission type" class="w-100"
+                    required />
+             </div>
         </div>
         <div class="row mt-3">
             <div class="col-md-6 d-flex flex-column">
@@ -34,12 +40,12 @@
                 </p-select>
             </div>
         </div>
-        <div class="row mt-3">
-            <div class="col-md-6 d-flex flex-column">
-                <label>Admission Type</label>
-                <p-select [(ngModel)]="admission.admissionType" name="admissionType" [options]="admissionTypeOptions"
-                    optionLabel="label" optionValue="value" placeholder="Select admission type" class="w-100"
-                    required />
+         <div class="row mt-3">
+            <div class="col-md-12 d-flex flex-column">
+                <label>Reason</label>
+                <textarea pTextarea [(ngModel)]="admission.reasonForAdmit" name="reasonForVisit"
+                    placeholder="Reason for visit" rows="3" class="w-100" required>
+        </textarea>
             </div>
         </div>
     </div>
