--- a/10.2.0/angular/src/app/home/home.component.html
+++ b/10.2.0/angular/src/app/home/home.component.html
@@ -282,7 +282,7 @@
                                 <ng-template #body let-product>
                                     <tr>
                                         <td>
-                                            <span><b>{{ product.medicineName }}</b></span>
+                                            <span><b>{{ product.name }}</b></span>
                                         </td>
                                         <td>
                                             <span class="badge badge-soft-success"
