--- a/10.2.0/angular/src/app/nurse/edit-nurse/edit-nurse.component.html
+++ b/10.2.0/angular/src/app/nurse/edit-nurse/edit-nurse.component.html
@@ -1,72 +1,70 @@
 <form #nurseForm="ngForm">
-
   <!-- Gender -->
-  <div class="form-group row required">
-    <label class="col-md-3 col-form-label">Gender</label>
-    <div class="col-md-9">
-      <div *ngFor="let gender of genders" class="form-check form-check-inline">
-        <input class="form-check-input" type="radio" name="gender" [id]="'nurse_gender_' + gender" [value]="gender"
-          [(ngModel)]="nurseData.gender" (ngModelChange)="updateData()" required #genderModel="ngModel" #genderEl>
-        <label class="form-check-label" [for]="'nurse_gender_' + gender">
-          {{ gender }}
-        </label>
+  <div class="form-group row required mb-0 mt-2">
+    <div class="col-md-6">
+      <label class="col-form-label">Gender</label>
+      <div class="d-flex flex-row">
+        <div *ngFor="let gender of genders" class="mr-2">
+          <p-radiobutton name="gender" [value]="gender" [(ngModel)]="nurseData.gender"
+            (ngModelChange)="onInputChange()" #genderEl required #genderModel="ngModel" size="small"
+            class="mr-2"></p-radiobutton>
+          <label class="m-0" [for]="'gender_' + gender">{{ gender }}</label>
+        </div>
       </div>
     </div>
-  </div>
 
-  <!-- Shift Timing -->
-  <div class="form-group row required">
-    <label class="col-md-3 col-form-label" for="shiftTiming">Shift Timing</label>
-    <div class="col-md-9">
-      <input type="time" id="shiftTiming" name="shiftTiming" class="form-control" required
-        [(ngModel)]="nurseData.shiftTiming" (ngModelChange)="updateData()" #shiftModel="ngModel" #shiftEl>
-      <abp-validation-summary [control]="shiftModel" [controlEl]="shiftEl"></abp-validation-summary>
+    <!-- Date of Birth -->
+    <div class="col-md-6 d-flex flex-column">
+      <label class="col-form-label">Date of Birth</label>
+      <p-datepicker [(ngModel)]="nurseData.dateOfBirth" name="dateOfBirth" [showIcon]="true" [maxDate]="today"
+        placeholder="Select birth date" (ngModelChange)="onInputChange()" #dobEl #dobModel="ngModel" required>
+      </p-datepicker>
+      <abp-validation-summary [control]="dobModel" [controlEl]="dobEl"></abp-validation-summary>
     </div>
   </div>
 
-  <!-- Department -->
-  <div class="form-group row required">
-    <label class="col-md-3 col-form-label" for="nurseDepartment">Department</label>
-    <div class="col-md-9">
-      <input type="text" id="nurseDepartment" name="department" class="form-control" required
-        [(ngModel)]="nurseData.department" (ngModelChange)="updateData()" #departmentModel="ngModel" #departmentEl>
+  <!-- Shift Timing & Department -->
+  <div class="form-group row required mb-0 mt-2">
+    <div class="col-md-6">
+      <label class="col-form-label" for="shiftTiming">Shift Timing</label>
+      <p-datepicker [(ngModel)]="nurseData.shiftTiming" [iconDisplay]="'input'" [showIcon]="true"
+        [timeOnly]="true" inputId="templatedisplay" required (ngModelChange)="updateData()"
+        #shiftModel="ngModel" #shiftEl>
+        <ng-template #inputicon let-clickCallBack="clickCallBack">
+          <i class="pi pi-clock" (click)="clickCallBack($event)"></i>
+        </ng-template>
+      </p-datepicker>
+      <abp-validation-summary [control]="shiftModel" [controlEl]="shiftEl"></abp-validation-summary>
+    </div>
+
+    <div class="col-md-6">
+      <label class="col-form-label" for="nurseDepartment">Department</label>
+      <p-select [options]="departments" placeholder="Select department" optionLabel="name"
+        (ngModelChange)="updateData()" #departmentModel="ngModel" #departmentEl optionValue="name"
+        [(ngModel)]="nurseData.department" name="department" class="w-100" required>
+      </p-select>
       <abp-validation-summary [control]="departmentModel" [controlEl]="departmentEl"></abp-validation-summary>
     </div>
   </div>
 
-  <!-- Qualification -->
-  <div class="form-group row required">
-    <label class="col-md-3 col-form-label" for="nurseQualification">Qualification</label>
-    <div class="col-md-9">
-      <input type="text" id="nurseQualification" name="qualification" class="form-control" required
-        [(ngModel)]="nurseData.qualification" (ngModelChange)="updateData()" #qualificationModel="ngModel"
-        #qualificationEl>
+  <!-- Qualification & Experience -->
+  <div class="form-group row required mb-0 mt-2">
+    <div class="col-md-6 d-flex flex-column">
+      <label class="col-form-label" for="nurseQualification">Qualification</label>
+      <p-select [options]="qualifications" placeholder="Select qualification" optionLabel="label"
+        (ngModelChange)="updateData()" optionValue="value" [(ngModel)]="nurseData.qualification"
+        name="qualificationId" required #qualificationModel="ngModel" #qualificationEl>
+      </p-select>
       <abp-validation-summary [control]="qualificationModel" [controlEl]="qualificationEl"></abp-validation-summary>
     </div>
-  </div>
 
-  <!-- Years of Experience -->
-  <div class="form-group row required">
-    <label class="col-md-3 col-form-label" for="nurseExperience">Years of Experience</label>
-    <div class="col-md-9">
-      <input type="number" id="nurseExperience" name="experience" class="form-control" required min="0"
-        [(ngModel)]="nurseData.yearsOfExperience" (ngModelChange)="updateData()" #expModel="ngModel" #expEl>
+    <div class="col-md-6">
+      <label class="col-form-label" for="nurseExperience">Years of Experience</label>
+      <p-inputnumber class="w-100" inputId="integeronly" name="experience" required min="0"
+        [(ngModel)]="nurseData.yearsOfExperience" (ngModelChange)="updateData()" #expModel="ngModel" #expEl
+        placeholder="Enter experience">
+      </p-inputnumber>
       <abp-validation-summary [control]="expModel" [controlEl]="expEl"></abp-validation-summary>
-    </div>
-  </div>
-
-   <!-- Date of Birth -->
-  <div class="form-group row required">
-    <label class="col-md-3 col-form-label" for="dob">Date of Birth</label>
-    <div class="col-md-9">
-      <input type="date" id="dob" name="dob"
-             class="form-control"
-             required
-             [(ngModel)]="nurseData.dateOfBirth"
-             (ngModelChange)="onInputChange()"
-             #dobModel="ngModel"
-             #dobEl>
-      <abp-validation-summary [control]="dobModel" [controlEl]="dobEl"></abp-validation-summary>
     </div>
   </div>
 </form>
