--- a/10.2.0/angular/src/app/patient/edit-patients/edit-patients.component.html
+++ b/10.2.0/angular/src/app/patient/edit-patients/edit-patients.component.html
@@ -1,156 +1,62 @@
 <form #patientForm="ngForm">
-  <!-- Gender -->
-  <div class="form-group row required">
-    <label class="col-md-3 col-form-label">Gender</label>
-    <div class="col-md-9">
-      <div *ngFor="let gender of genders" class="form-check form-check-inline">
-        <input class="form-check-input" type="radio" name="gender" [id]="'gender_' + gender" [value]="gender"
-          [(ngModel)]="patientData.gender" (ngModelChange)="onInputChange()" required #genderModel="ngModel" #genderEl>
-        <label class="form-check-label" [for]="'gender_' + gender">{{ gender }}</label>
+
+  <div class="form-group row required mb-0 mt-2">
+    <div class="col-md-4">
+      <label class="col-form-label">Gender</label>
+      <div class="d-flex flex-row">
+        <div *ngFor="let gender of genders" class=" mr-2">
+          <p-radiobutton name="gender" [value]="gender" [(ngModel)]="patientData.gender" (ngModelChange)="onInputChange()"
+            #genderEl required #genderModel="ngModel" size="small" class="mr-2" />
+          <label class="m-0" [for]="'gender_' + gender">{{ gender }}</label>
+        </div>
       </div>
     </div>
-  </div>
 
-  <!-- Date of Birth -->
-  <div class="form-group row required">
-    <label class="col-md-3 col-form-label" for="dob">Date of Birth</label>
-    <div class="col-md-9">
-      <input type="date" id="dob" name="dob" class="form-control" required [(ngModel)]="patientData.dateOfBirth"
-        (ngModelChange)="onInputChange()" #dobModel="ngModel" #dobEl>
+    <div class="col-md-3 d-flex flex-column">
+      <label class="col-form-label" for="bloodGroup">Blood Group</label>
+      <p-select [options]="bloodGroups" placeholder="Select bloodGroup" optionLabel="label"
+        (ngModelChange)="onInputChange()" #bloodGroupModel="ngModel" #bloodGroupEl optionValue="value"
+        [(ngModel)]="patientData.bloodGroup" name="bloodGroup" required>
+      </p-select>
+      <abp-validation-summary [control]="bloodGroupModel" [controlEl]="bloodGroupEl"></abp-validation-summary>
+    </div>
+
+    <div class="col-md-5 d-flex flex-column">
+      <label class="col-form-label">Date of Birth</label>
+      <p-datepicker [(ngModel)]="patientData.dateOfBirth" name="dateOfBirth" [showIcon]="true" [maxDate]="today"
+        placeholder="Select birth date" (ngModelChange)="onInputChange()" #dobEl #dobModel="ngModel" required>
+      </p-datepicker>
       <abp-validation-summary [control]="dobModel" [controlEl]="dobEl"></abp-validation-summary>
     </div>
   </div>
 
-  <!-- Address -->
-  <div class="form-group row required">
-    <label class="col-md-3 col-form-label" for="address">Address</label>
-    <div class="col-md-9">
-      <textarea id="address" name="address" rows="3" class="form-control" required [(ngModel)]="patientData.address"
-        (ngModelChange)="onInputChange()" #addressModel="ngModel" #addressEl></textarea>
-      <abp-validation-summary [control]="addressModel" [controlEl]="addressEl"></abp-validation-summary>
-    </div>
-  </div>
 
-  <!-- Blood Group -->
-  <div class="form-group row required">
-    <label class="col-md-3 col-form-label" for="bloodGroup">Blood Group</label>
-    <div class="col-md-9">
-      <select id="bloodGroup" name="bloodGroup" class="form-control" required [(ngModel)]="patientData.bloodGroup"
-        (ngModelChange)="onInputChange()" #bloodGroupModel="ngModel" #bloodGroupEl>
-        <option *ngFor="let bg of bloodGroups" [value]="bg">{{ bg }}</option>
-      </select>
-      <abp-validation-summary [control]="bloodGroupModel" [controlEl]="bloodGroupEl"></abp-validation-summary>
-    </div>
-  </div>
-
-  <!-- Emergency Contact Name -->
-  <div class="form-group row required">
-    <label class="col-md-3 col-form-label" for="emergencyName">Emergency Contact Name</label>
-    <div class="col-md-9">
-      <input type="text" id="emergencyName" name="emergencyName" class="form-control" required
+  <div class="form-group row required mb-0 mt-2">
+    <div class="col-md-6">
+      <label class="col-form-label" for="emergencyName">Emergency Contact Name</label>
+      <input type="text" id="emergencyName" name="emergencyName" pInputText class="w-100" required
         [(ngModel)]="patientData.emergencyContactName" (ngModelChange)="onInputChange()" #emergencyNameModel="ngModel"
-        #emergencyNameEl>
+        #emergencyNameEl placeholder="Enter emergency contact name">
       <abp-validation-summary [control]="emergencyNameModel" [controlEl]="emergencyNameEl"></abp-validation-summary>
     </div>
-  </div>
-
-  <!-- Emergency Contact Number -->
-  <div class="form-group row required">
-    <label class="col-md-3 col-form-label" for="emergencyNumber">Emergency Contact Number</label>
-    <div class="col-md-9">
-      <input type="text" id="emergencyNumber" name="emergencyNumber" class="form-control" required
-        [(ngModel)]="patientData.emergencyContactNumber" (ngModelChange)="onInputChange()"
-        #emergencyNumberModel="ngModel" #emergencyNumberEl>
+    <div class="col-md-6">
+      <label class="col-form-label" for="emergencyNumber">Emergency Contact Number</label>
+      <input type="text" id="emergencyNumber" name="emergencyNumber" pInputText class="w-100" required
+        [(ngModel)]="patientData.emergencyContactNumber" (ngModelChange)="onInputChange()" #emergencyNumberModel="ngModel"
+        #emergencyNumberEl pattern="^[0-9]{10}$" maxlength="10" minlength="10"
+        placeholder="Enter emergency contact number">
       <abp-validation-summary [control]="emergencyNumberModel" [controlEl]="emergencyNumberEl"></abp-validation-summary>
     </div>
   </div>
-  <!-- Insurance Provider -->
-  <!-- <div class="form-group row">
-    <label class="col-md-3 col-form-label" for="insuranceProvider">Insurance Provider</label>
-    <div class="col-md-9">
-      <input type="text" id="insuranceProvider" name="insuranceProvider" class="form-control" required
-             [(ngModel)]="patientData.insuranceProvider" (ngModelChange)="onInputChange()" #insuranceproviderModel="ngModel" #insuranceproviderEl>
-      <abp-validation-summary [control]="insuranceproviderModel" [controlEl]="insuranceproviderEl"></abp-validation-summary>
-            </div>
-  </div> -->
 
-  <!-- Insurance Policy Number -->
-  <!-- <div class="form-group row">
-    <label class="col-md-3 col-form-label" for="policyNumber">Insurance Policy Number</label>
-    <div class="col-md-9">
-      <input type="text" id="policyNumber" name="policyNumber" class="form-control" required
-             [(ngModel)]="patientData.insurancePolicyNumber" (ngModelChange)="onInputChange()" #insurancepolicyModel="ngModel" #insurancepolocyEl>
-      <abp-validation-summary [control]="insurancepolicyModel" [controlEl]="insurancepolocyEl"></abp-validation-summary>
-    </div>
-  </div> -->
 
-  <!-- Assigned Nurse -->
-  <!-- <div class="form-group row">
-    <label class="col-md-3 col-form-label" for="nurse">Assigned Nurse</label>
-    <div class="col-md-9">
-      <select id="nurse" name="assignedNurseId" class="form-control" [(ngModel)]="patientData.assignedNurseId"
-        (ngModelChange)="onInputChange()">
-        <option [ngValue]="null">-- Select Nurse --</option>
-        <option *ngFor="let nurse of nurseList" [ngValue]="nurse.id">{{ nurse.fullName }}</option>
-      </select>
+  <!-- Address -->
+  <div class="form-group row required mb-0 mt-2">
+    <div class="col-md-12 d-flex flex-column">
+      <label class="col-form-label" for="address">Address</label>
+      <textarea (ngModelChange)="onInputChange()" name="address" rows="5" cols="30" pTextarea [(ngModel)]="patientData.address" required
+        #addressModel="ngModel" #addressEl placeholder="Enter address"></textarea>
+      <abp-validation-summary [control]="addressModel" [controlEl]="addressEl"></abp-validation-summary>
     </div>
   </div>
-  <!-- Assigned Doctor -->
-  <!-- <div class="form-group row">
-    <label class="col-md-3 col-form-label" for="doctor">Assigned Doctor</label>
-    <div class="col-md-9">
-      <select id="doctor" name="assignedDoctorId" class="form-control" [(ngModel)]="patientData.assignedDoctorId"
-        (ngModelChange)="onInputChange()">
-        <option [ngValue]="null">-- Select Doctor --</option>
-        <option *ngFor="let doctor of doctorList" [ngValue]="doctor.id">{{ doctor.fullName }}</option>
-      </select>
-    </div>
-  </div> -->
-
-  <!-- Is Admitted -->
-  <!-- <div class="form-group row">
-    <label class="col-md-3 col-form-label">Is Admitted</label>
-    <div class="col-md-9">
-      <input type="checkbox" name="isAdmitted" [(ngModel)]="patientData.isAdmitted" (change)="onAdmitChange()">
-    </div>
-  </div> -->
-
-  <!-- Admission Date -->
-  <!-- <div class="form-group row">
-    <label class="col-md-3 col-form-label" for="admissionDate">Admission Date</label>
-    <div class="col-md-9">
-      <input type="date" id="admissionDate" name="admissionDate" class="form-control"
-        [(ngModel)]="patientData.admissionDate" (ngModelChange)="onInputChange()">
-      <!-- <abp-validation-summary [control]="admissionModel" [controlEl]="admissionEl"></abp-validation-summary> 
-    </div>
-  </div> -->
-
-  <!-- Room -->
-  <!--<div class="form-group row required">
-    <label class="col-md-3 col-form-label" for="room">Room</label>
-    <div class="col-md-9">
-      <select id="room" name="roomId" class="form-control" required [(ngModel)]="patientData.roomId"
-        (ngModelChange)="onInputChange()">
-        <option [ngValue]="null">-- Select Room --</option>
-        <option *ngFor="let room of roomList" [ngValue]="room.id">
-          {{ room.roomNumber }} – {{ room.roomTypeName }}
-        </option>
-      </select>
-    </div>
-  </div>-->
-
-
-  <!-- Discharge Date -->
-  <!-- <div class="form-group row">
-    <label class="col-md-3 col-form-label" for="dischargeDate">Discharge Date</label>
-    <div class="col-md-9">
-      <input type="date" id="dischargeDate" name="dischargeDate" class="form-control"
-             [(ngModel)]="patientData.dischargeDate" (ngModelChange)="onInputChange()" #dischargeModel="ngModel" #dischargeEl>
-      <abp-validation-summary [control]="dischargeModel" [controlEl]="dischargeEl"></abp-validation-summary>
-    </div>
-  </div> -->
-
-
-
-
 </form>
